--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,10 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Paleo Snapshot",
+  "name": "Paleo Snapshot: A Paleobiology information interface",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "Pangea.jpeg",
+      "type": "image/jpeg"
     }
   ],
   "start_url": ".",
